Fix in tests for Java 8 compatibility.