@@ -1,6 +1,7 @@
 package org.nasdanika.diagram.gen.tests.plantuml;
 
 import java.io.File;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 
 import org.junit.Test;
@@ -10,8 +11,6 @@ import org.nasdanika.diagram.DiagramElement;
 import org.nasdanika.diagram.DiagramFactory;
 import org.nasdanika.diagram.Link;
 import org.nasdanika.diagram.gen.plantuml.Generator;
-import org.nasdanika.exec.content.ContentFactory;
-import org.nasdanika.exec.content.Text;
 
 /**
  * Common methods for testing
@@ -60,7 +59,7 @@ public class TestSequenceDiagram {
 		System.out.println(spec);
 		File outputDir = new File("target/diagrams");
 		outputDir.mkdirs();
-		Files.writeString(new File(outputDir, "sequence.html").toPath(), generator.generateUmlDiagram(diagram));		
+		Files.write(new File(outputDir, "sequence.html").toPath(), generator.generateUmlDiagram(diagram).getBytes(StandardCharsets.UTF_8));		
 	}
 
 }
